# c-shooter

./: .gitignore  CMakeLists.txt
dependencies/: CMakeLists.txt
src/: CMakeLists.txt
src/c-shooter/: CMakeLists.txt  client_main.c  main.c  server_main.c
src/c-shooter/event/: event.c  event.h
src/c-shooter/game/: game.c  game.h
src/c-shooter/player/: player.c  player.h
src/client/: CMakeLists.txt  main.c
src/client/game/: game.c  game.h
src/client/player/: player.c  player.h
src/engine/: CMakeLists.txt
src/engine/CNG/: CNG.h
src/engine/CNG/math/: vector.h
src/engine/CNG/shapes/: shapes.c  shapes.h
src/engine/CNG/utils/: utils.h
src/engine/CNG/window/: window.c  window.h
src/engine/include/CNG/: common.h  graphics.h  network.h
src/engine/include/CNG/common/: collection.h  math.h  timer.h
src/engine/include/CNG/graphics/: base.h  shapes.h  window.h
src/engine/include/CNG/network/: game_server.h  server.h
src/engine/src/CNG/common/: collection.c  timer.c
src/engine/src/CNG/graphics/: shapes.c  window.c
src/engine/src/CNG/network/: game_server.c  server.c
src/server/: CMakeLists.txt  main.c  server_main.c
src/server/server/: game_server.c  game_server.h  server.c  server.h
src/server/utils/: collection.c  collection.h  timer.c  timer.h
